--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -60,7 +60,7 @@ x-airflow-common:
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
     AIRFLOW__CORE__FERNET_KEY: ''
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-    AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
+    AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
     AIRFLOW__CORE__EXECUTION_API_SERVER_URL: 'http://airflow-apiserver:8080/execution/'
     # yamllint disable rule:line-length
     # Use simple http server on scheduler for health checks
@@ -92,6 +92,8 @@ services:
       POSTGRES_USER: airflow
       POSTGRES_PASSWORD: airflow
       POSTGRES_DB: airflow
+    networks:
+      - main-bridge
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
     healthcheck:
@@ -99,12 +101,13 @@ services:
       interval: 10s
       retries: 5
       start_period: 5s
-    restart: always
 
   redis:
     # Redis is limited to 7.2-bookworm due to licencing change
     # https://redis.io/blog/redis-adopts-dual-source-available-licensing/
     image: redis:7.2-bookworm
+    networks:
+      - main-bridge
     expose:
       - 6379
     healthcheck:
@@ -113,20 +116,20 @@ services:
       timeout: 30s
       retries: 50
       start_period: 30s
-    restart: always
 
   airflow-apiserver:
     <<: *airflow-common
     command: api-server
     ports:
       - "8080:8080"
+    networks:
+      - main-bridge
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/api/v2/version"]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 30s
-    restart: always
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -141,7 +144,8 @@ services:
       timeout: 10s
       retries: 5
       start_period: 30s
-    restart: always
+    networks:
+      - main-bridge
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -150,13 +154,14 @@ services:
   airflow-dag-processor:
     <<: *airflow-common
     command: dag-processor
+    networks:
+      - main-bridge
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type DagProcessorJob --hostname "$${HOSTNAME}"']
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 30s
-    restart: always
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -165,6 +170,8 @@ services:
   airflow-worker:
     <<: *airflow-common
     command: celery worker
+    networks:
+      - main-bridge
     healthcheck:
       # yamllint disable rule:line-length
       test:
@@ -179,7 +186,7 @@ services:
       # Required to handle warm shutdown of the celery workers properly
       # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
       DUMB_INIT_SETSID: "0"
-    restart: always
+      AIRFLOW__CELERY__WORKER_CONCURRENCY: 64
     depends_on:
       <<: *airflow-common-depends-on
       airflow-apiserver:
@@ -190,13 +197,15 @@ services:
   airflow-triggerer:
     <<: *airflow-common
     command: triggerer
+    networks:
+      - main-bridge
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 30s
-    restart: always
+
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -205,6 +214,8 @@ services:
   airflow-init:
     <<: *airflow-common
     entrypoint: /bin/bash
+    networks:
+      - main-bridge
     # yamllint disable rule:line-length
     command:
       - -c
@@ -298,6 +309,8 @@ services:
     <<: *airflow-common
     profiles:
       - debug
+    networks:
+      - main-bridge
     environment:
       <<: *airflow-common-env
       CONNECTION_CHECK_MAX_COUNT: "0"
@@ -319,13 +332,15 @@ services:
       - flower
     ports:
       - "5555:5555"
+    networks:
+      - main-bridge
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:5555/"]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 30s
-    restart: always
+
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -333,3 +348,7 @@ services:
 
 volumes:
   postgres-db-volume:
+
+networks:
+  main-bridge:
+    external: true
